--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   while get knowledge about modern tools such as git, blockchain, etc ...
 
 # social links
-twitter_username: No twitter :grin: # DO NOT include the @ character, or else the build will fail!
+twitter_username: No twitter # DO NOT include the @ character, or else the build will fail!
 github_username:  JitrZ # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
